# test-task-ba

./: .gitignore  Readme.md  manage.py  pyproject.toml  pytest.ini
apps/graphql_api/: schema.py
apps/graphql_api/tests/: basic_tests.py  results.py
apps/measurements/: schema.py
apps/measurements/migrations/: 0001_initial.py
apps/measurements/models/: __init__.py
apps/measurements/models/location/: factory.py  model.py  tests.py
apps/measurements/models/measurement_point/: factory.py  model.py  tests.py
apps/measurements/models/water_flow_measurement/: factory.py  model.py  tests.py
requirements/: dev.txt
water_sensor/: asgi.py  settings.py  urls.py  wsgi.py
